# qrzlogger

./: LICENSE  README.md  config.ini.dist  qrzlogger.py  setup.cfg
src/qrzlogger/: __init__.py  __main__.py
