[metadata]
name = qrzlogger
version = 0.6.8
author = Michael Clemens
author_email = qrzlogger@qrz.is
description = A python application to log QSOs directly to QRZ.com from the command line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/exitnode/qrzlogger
project_urls =
    Bug Tracker = https://github.com/exitnode/qrzlogger/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    xmltodict
    prettytable
    colored
    requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    qrzlogger = qrzlogger.__main__:main
